Update company name and contact email in Hungarian section

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!-- Hungarian -->
     <section class="lang lang-hu" id="about-hu">
       <h2>Rólunk</h2>
-      <p><strong>M Dwarf Informatics Ltd.</strong> független technológiai tanácsadó cég. Szakterületünk az alkalmazott kutatás, a rendszertervezés és az adatvezérelt innováció. Szervezeteknek segítünk a bonyolult technikai kihívások megbízható, mérhető megoldásokká alakításában.</p>
+      <p><strong>M Dwarf Informatika kft.</strong> független technológiai tanácsadó cég. Szakterületünk az alkalmazott kutatás, a rendszertervezés és az adatvezérelt innováció. Szervezeteknek segítünk a bonyolult technikai kihívások megbízható, mérhető megoldásokká alakításában.</p>
       <p>Munkánk a tudományos gondolkodást gyakorlati mérnöki megközelítéssel ötvözi. Legyen szó IT-infrastruktúra fejlesztéséről vagy új számítási módszerek feltárásáról, célunk változatlan: egyértelműség, pontosság és tartós érték teremtése technológiával.</p>
     </section>
 
@@ -119,7 +119,7 @@
     <section class="lang lang-hu" id="contact-hu">
       <h2>Kapcsolat</h2>
       <p>Együttműködés, tanácsadás vagy kutatási megkeresés esetén:</p>
-      <p>Email: <a class="email" href="mailto:gezapeti+public@xxmail.com">gezapeti+public@xxmail.com</a></p>
+      <p>Email: <a class="email" href="mailto:contact _at_ mdwarf.com">contact _at_ mdwarf.com</a></p>
     </section>
   </main>
 
