--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       center/cover no-repeat; }
 
     nav { background:#062743; display:flex; justify-content:center; gap:18px; padding:10px 12px; }
-    nav a { color:#ddd; text-decoration:none; font-weight:500; padding:6px 4px; }
+    nav a { color:#ddd; text-decoration:none; font-weight:500; justify-content:center; padding:6px 4px; }
     nav a:hover { color:var(--accent); }
     main { max-width:900px; margin:36px auto; background:#fff; padding:36px 28px; border-radius:10px; box-shadow:0 4px 16px rgba(0,0,0,.06); }
     h2 { color:var(--primary); margin:24px 0 12px; font-weight:600; }
