Refactor nav styles for better alignment and centering

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 30"><clipPath id="c"><path d="M0,0 v30 h60 v-30 z"/></clipPath><path d="M0,0 v30 h60 v-30 z" fill="%23012169"/><path d="M0,0 60,30 M60,0 0,30" stroke="%23fff" stroke-width="6"/><path d="M0,0 60,30 M60,0 0,30" clip-path="url(%23c)" stroke="%23C8102E" stroke-width="4"/><path d="M30,0 v30 M0,15 h60" stroke="%23fff" stroke-width="10"/><path d="M30,0 v30 M0,15 h60" stroke="%23C8102E" stroke-width="6"/></svg>')
       center/cover no-repeat; }
 
-    nav { background:#062743; display:flex; justify-content:center; gap:18px; padding:10px 12px; }
-    nav a { color:#ddd; text-decoration:none; font-weight:500; justify-content:center; padding:6px 4px; }
+    nav { background:#062743; display:flex; justify-content:center;  text-align:center; gap:18px; padding:10px 12px; }
+    nav a { color:#ddd; text-decoration:none; font-weight:500; justify-content:center;  text-align:center; padding:6px 4px; }
     nav a:hover { color:var(--accent); }
     main { max-width:900px; margin:36px auto; background:#fff; padding:36px 28px; border-radius:10px; box-shadow:0 4px 16px rgba(0,0,0,.06); }
     h2 { color:var(--primary); margin:24px 0 12px; font-weight:600; }
